<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TG WS Proxy</string>
    <string name="start_proxy">Запустить прокси</string>
    <string name="stop_proxy">Остановить прокси</string>
    <string name="proxy_status">Статус: %s</string>
    <string name="status_running">Работает</string>
    <string name="status_stopped">Остановлен</string>
    <string name="status_error">Ошибка</string>
    <string name="settings">Настройки</string>
    <string name="host">Хост</string>
    <string name="port">Порт</string>
    <string name="secret">Секрет (32 hex символа)</string>
    <string name="save">Сохранить</string>
    <string name="notification_channel_name">TG WS Proxy Service</string>
    <string name="notification_channel_description">Уведомление о работе прокси</string>
    <string name="notification_title">TG WS Proxy</string>
    <string name="notification_text">Прокси работает на порту %d</string>
    <string name="stop">Остановить</string>
    <string name="traffic_stats" formatted="true">↑ %s ↓ %s</string>
    <string name="connections">Подключений: %d</string>
    <string name="dc_config">Конфигурация DC</string>
    <string name="dc_2">DC 2</string>
    <string name="dc_4">DC 4</string>
    <string name="dc_ip_hint">IP адрес (оставьте пустым для авто)</string>
</resources>
